feat: add jest for testing
chore: add .gitignore rules for test files and directories

chore: add jest configuration file

chore: add test scripts to package.json

feat: add test files for cli, interactive cli and scaffolders

test: add tests for cli and interactive cli functionality

test: add tests for scaffolders and common utilities

chore: remove unnecessary files and folders

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,17 @@ Thumbs.db
 ehthumbs.db
 
 # Test directories
-test-project/ 
+test-project/
+
+# Coverage directory used by tools like istanbul
+coverage/
+.nyc_output/
+
+# Jest cache
+.jest/
+
+# Test temporary directories
+*-test-project/
+*-test-dir/
+existing-project/
+interactive-*/ 
