feat: add ESLint configuration and fix linting issues
This commit introduces an ESLint configuration file to
enforce code style and quality.  It also includes
fixes for linting errors found in the codebase.  This
improves code maintainability and consistency.

feat: enhance CLI with improved output and error handling

This commit enhances the command-line interface (CLI)
by improving the output formatting and adding more
robust error handling.  This improves the user
experience and makes the CLI more user-friendly.

feat: add support for configurable project structure

This commit adds support for configuring the project
structure through command-line arguments.  This
provides more flexibility and allows users to choose
the structure that best suits their needs.

feat: add support for installing icon packages

This commit adds support for installing various icon
packages (Lucide, Heroicons, Fontawesome, Boxicons)
to enhance the project's visual appeal.  Users can
select their preferred package during project setup.

feat: add support for installing Sage theme

This commit adds support for installing the Sage theme
during project setup.  This provides a modern and
flexible theme option for users.

test: add unit tests for CLI and core functionalities

This commit adds unit tests for the CLI and core
functionalities to ensure code quality and prevent
future regressions.  This improves the overall
robustness of the application.

chore: update dependencies and improve build process

This commit updates project dependencies to their
latest versions and improves the build process for
better efficiency and maintainability.  This ensures
the project uses the most up-to-date tools and
libraries.

refactor: improve code structure and readability

This commit refactors the codebase to improve code
structure and readability.  This makes the code
easier to understand, maintain, and extend.

perf: optimize code for better performance

This commit optimizes certain parts of the co

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node ./bin/cli.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [
     "wordpress",
@@ -28,6 +30,11 @@
     "inquirer": "^8.2.4"
   },
   "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0"
   },
   "engines": {
